--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,3 +9,7 @@ spacy==3.7.2
 requests==2.31.0
 python-dotenv==1.0.0
 httpx==0.25.2
+datasets>=2.0.0
+evaluate>=0.4.0
+rouge-score>=0.1.2
+scikit-learn>=1.0.0
