--- a/.gitignore
+++ b/.gitignore
@@ -446,4 +446,9 @@ yarn.lock
 
 backend/data/
 
+backend/training/__pycache__
+backend/training/data
+backend/training/models
+backend/training/training_output
+
 backend/models/
